2006-06-29  Derek Price  <derek@ximbiot.com>

	* client.c (is_arg_a_parent_or_listed_dir): Strip trailing slashes from
	dir name defore searching for it.  Partially addresses TODO #205.
	Avoid false positives.
	* sanity.sh (trailingslashes): Update to compensate.

2006-06-28  Larry Jones  <lawrence.jones@ugs.com>

	* error.c (error): Downgrade syslog message priority from
	LOG_EMERG (which is frequently broadcast to all logged in users,
	most of whom are unlikely to understand or be able to do anything
	about the problem) to LOG_CRIT.

2006-06-28  Derek Price  <derek@ximbiot.com>

	[bug #16961]
	* login.c (get_cvs_password): Return copy of global variable.
	(Patch from <mbarabas@redhat.com>.)

2006-06-24  Mark D. Baushke  <mdb@gnu.org>

	* rcs.c (RCS_check_tag): Revert last change.
	* sanity.sh (tag-valid): Delete test.

2006-06-26  Derek Price  <derek@ximbiot.com>

	* sign.c (gen_signature), verify.c (verify_signature): Use new
	POPEN_BINARY_FLAG.

2006-06-24  Jim Hyslop <jhyslop@dreampossible.ca>

	* rcs.c: Tighten up error checking on valid tag identifiers.
	* sanity.sh: added test to exercise tag error checking.

	* sign.c, verify.c: back out "b" changes made earlier today - not
	supported by popen on other platforms.

	* diff.c: use unlink_file instead of CVS_UNLINK (which resolves to
	unlink) because on Windows, unlink doesn't remove read-only files.

	* sign.c, subr.c, verify.c: add "b" (binary) flag to open the files
	and pipes in binary mode (on Windows, CRLF translation really confuses
	gpg).

2006-06-22  Larry Jones  <lawrence.jones@ugs.com>

	* mkmodules.c (modules_contents): Remove defunct -i option.

2006-06-21  Larry Jones  <lawrence.jones@ugs.com>

	* client.c: Remove unused global variable last_merge_no_change.
	(send_modified): Cast first arg of send_to_server() to correct type.
	* rcs.c (expand_keywords, RCS_delete_openpgp_signatures): Remove
	unused variables.
	* server.c (do_cvs_command): Remove unused variables.