@@ -50,6 +50,7 @@ void check_numeric (const char *, int, char **);
 char *make_message_rcsvalid (const char *message);
 int file_has_markers (const struct file_info *);
 bool file_contains_keyword (const struct file_info *finfo);
+void get_stream (FILE *, const char *, char **, size_t *, size_t *);
 void get_file (const char *, const char *, const char *,
                char **, size_t *, size_t *);
 void force_write_file (const char *file, const char *data, size_t len);
